force-app/main/default/objects/IFv2_MappingCondition__mdt/IFv2_MappingCondition__mdt.object-meta.xml
<CustomObject>
    <description>Used to specify conditions for mapping predefined values</description>
    <label>Mapping Condition</label>
    <pluralLabel>Mapping Conditions</pluralLabel>
</CustomObject>