force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/ControllingField__c.field-meta.xml
<CustomField>
    <fullName>ControllingField__c</fullName>
    <inlineHelpText>Please enter the API name of the field which controls this Condition</inlineHelpText>
    <label>Controlling Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>