force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/ConvertCurrency__c.field-meta.xml
<CustomField>
    <fullName>ConvertCurrency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please check to enable currency conversion for this record</inlineHelpText>
    <label>Convert Currency</label>
    <type>Checkbox</type>
</CustomField>