force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/ConvertToCurrency__c.field-meta.xml
<CustomField>
    <fullName>ConvertToCurrency__c</fullName>
    <inlineHelpText>Please enter the standard currency code</inlineHelpText>
    <label>Convert To(Currency)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>