force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/CurrencyField__c.field-meta.xml
<CustomField>
    <fullName>CurrencyField__c</fullName>
    <inlineHelpText>Please enter the API name of the currency field</inlineHelpText>
    <label>Currency Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>