force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/CurrencyReferenceDateField__c.field-meta.xml
<CustomField>
    <fullName>CurrencyReferenceDateField__c</fullName>
    <inlineHelpText>Please enter the API name of the field which refers the date for this conversion</inlineHelpText>
    <label>Currency Reference Date Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>