force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/Mapping__c.field-meta.xml
<CustomField>
    <fullName>Mapping__c</fullName>
    <inlineHelpText>Please select the Predefined Mapping record to which this Condition is related to</inlineHelpText>
    <label>Mapping</label>
    <referenceTo>IFv2_PredefinedWorkflowFields__mdt</referenceTo>
    <relationshipLabel>Mapping Conditions</relationshipLabel>
    <relationshipName>MappingConditions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>