force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <inlineHelpText>Please select the appropriate operator</inlineHelpText>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>Does not Contain</fullName>
            </value>
            <value>
                <fullName>Less Than or Equals</fullName>
            </value>
            <value>
                <fullName>Greater Than or Equals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>