force-app/main/default/objects/IFv2_MappingCondition__mdt/fields/RoleApproverMapping__c.field-meta.xml
<CustomField>
    <fullName>RoleApproverMapping__c</fullName>
    <inlineHelpText>Please select the Role Approver Mapping record to which this Condition is related to</inlineHelpText>
    <label>Role Approver Mapping</label>
    <referenceTo>IFv2_RoleApproverMapping__mdt</referenceTo>
    <relationshipLabel>Mapping Conditions</relationshipLabel>
    <relationshipName>MappingConditions</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>