force-app/main/default/objects/IFv2_MappingCondition__mdt/listViews/AllConditions.listView-meta.xml
<ListView>
    <fullName>AllConditions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ControllingField__c</columns>
    <columns>Mapping__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <columns>RoleApproverMapping__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Conditions</label>
    <language>en_US</language>
</ListView>