force-app/main/default/objects/IFv2_MappingCondition__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>RoleApproverMapping__c</columns>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>ControllingField__c</columns>
    <columns>Mapping__c</columns>
    <columns>Operator__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ControllingField__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>RoleApproverMapping__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My View</label>
    <language>en_US</language>
</ListView>